# vtfls

./: COPYING  Makefile  README.md  pyproject.toml  setup.py
src/vtfls/: __init__.py  __main__.py
tests/: test_vtfls.py
tests/testdata/: DroppedBox.out  DroppedBox.vtf  Fine-partial.out  Fine-partial.vtf  Q4.out  Q4.vtf  T3.out  T3.vtf
vtfls/: __init__.py  __main__.py
