[project]
name = "vtfls"
version = "0.1.0"
description = "Inspect ASCII VTF files"
readme = "README.md"
authors = [
    { name = "Eivind Fonn", email = "eivind.fonn@sintef.no" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
]

[project.scripts]
vtfls = "vtfls.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "pytest>=9.0.2",
    "ruff>=0.14.8",
]

[tool.ruff]
line-length = 110
include = ["src/**/*.py", "tests/**/*.py"]

[tool.ruff.lint]
select = [
    "F",        # Pyflakes rules
    "W",        # PyCodeStyle warnings
    "E",        # PyCodeStyle errors
    "I",        # Sort imports properly
    "UP",       # Warn if certain things can changed due to newer Python versions
    "C4",       # Catch incorrect use of comprehensions, dict, list, etc
    "FA",       # Enforce from __future__ import annotations
    "ISC",      # Good use of string concatenation
    "ICN",      # Use common import conventions
    "RET",      # Good return practices
    "SIM",      # Common simplification rules
    "TID",      # Some good import practices
    "TCH",      # Enforce importing certain types in a TYPE_CHECKING block
    "PTH",      # Use pathlib instead of os.path
    "TD",       # Be diligent with TODO comments
    "NPY",      # Some numpy-specific things
]
ignore = [
    "E741",     # Ambiguous variable name
    "SIM115",   # Complains if we use __enter__ inside an __enter__ method
    "ISC001",   # Conflicts with rust formatting
    "TD003",    # Issue links for each todo comment
]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.mypy]
files = ["src/**/*.py", "tests/**/*.py"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
show_error_codes = true
warn_unused_ignores = true
warn_redundant_casts = true
